--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "email-validator": "^2.0.4",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
-    "pg": "^8.13.1"
+    "markdown-it": "^14.1.0",
+    "netlify-cli": "^17.38.1",
+    "netlify-lambda": "^2.0.16",
+    "pg": "^8.13.1",
+    "serverless-http": "^3.2.0"
   }
 }
