Minor fixes with project name and favicon.ico dimensions

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stem education portal",
+  "name": "stem_education_portal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
